umstruktierungen, gpu test start via cu - kernel lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,17 @@ FIND_PACKAGE(MATLAB)
 include_directories (inc)
 
 #Adding src directory to the project
-ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(test)
+ADD_SUBDIRECTORY(src)
 
 # For make-based builds, defines make target named test.
 # For Visual Studio builds, defines Visual Studio project named RUN_TESTS.
 enable_testing()
+
+add_test(
+    NAME runGPUUnitTests
+    COMMAND runGPUUnitTests
+)
 
 add_test(
     NAME runUnitTests
