first matlab interface implementation (matlab cmake script finally created)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ CUDA_ADD_LIBRARY(gridding3D gridding_gpu.cu griddingFunctions.cpp ../inc/cuda_ut
 CUDA_ADD_CUFFT_TO_TARGET(gridding3D)
 CUDA_ADD_CUBLAS_TO_TARGET(gridding3D)
 
+ADD_SUBDIRECTORY(matlab)
