--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories("${GTEST_DIR}/include")
 
 find_library(GTEST_LIB gtest "${GTEST_DIR}/mybuild/Debug")
 find_library(GTESTMAIN_LIB gtest_main "${GTEST_DIR}/mybuild/Debug")
-find_library(GRIDDING3D_LIB gridding3D "${CMAKE_SOURCE_DIR}/build/src/Debug")
+#find_library(GRIDDING3D_LIB gridding3D "${CMAKE_SOURCE_DIR}/build/src/Debug")
 
 #cpu test sources
 set(CPU_SOURCES gridding3D_tests.cpp ../src/griddingFunctions.cpp ../src/gridding3D_cpu.cpp)
@@ -23,4 +23,4 @@ target_link_libraries(runUnitTests ${GTEST_LIB} ${GTESTMAIN_LIB})
 
 cuda_add_executable(runGPUUnitTests ${GPU_SOURCES} ../inc/gridding_gpu.hpp)
 
-target_link_libraries(runGPUUnitTests ${GRIDDING3D_LIB} ${GTEST_LIB} ${GTESTMAIN_LIB})
+target_link_libraries(runGPUUnitTests gridding3D ${GTEST_LIB} ${GTESTMAIN_LIB})
