--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,11 @@ set(GPU_DOUBLE_PREC OFF CACHE BOOL "Enable double precision floating point opera
 
 if(GPU_DOUBLE_PREC)
   SET(CUDA_NVCC_FLAGS "-arch;sm_20")
+else(GPU_DOUBLE_PREC)
+  SET(CUDA_NVCC_FLAGS "-arch;sm_13")
 endif(GPU_DOUBLE_PREC)
+
+MESSAGE("setting NVCC FLAGS to: ${CUDA_NVCC_FLAGS}")
 
 CONFIGURE_FILE( ${CMAKE_SOURCE_DIR}/inc/config.hpp.cmake ${CMAKE_SOURCE_DIR}/inc/config.hpp)
 
