changed, in order to rereach positive gpu test results

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(GPU_DOUBLE_PREC OFF CACHE BOOL "Enable double precision floating point opera
 if(GPU_DOUBLE_PREC)
   SET(CUDA_NVCC_FLAGS "-arch;sm_20")
 else(GPU_DOUBLE_PREC)
-  SET(CUDA_NVCC_FLAGS "-arch;sm_13")
+  #SET(CUDA_NVCC_FLAGS "-arch;sm_13")
 endif(GPU_DOUBLE_PREC)
 
 MESSAGE("setting NVCC FLAGS to: ${CUDA_NVCC_FLAGS}")
