modified cmake config for use in linux environment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 FIND_PACKAGE(CUDA)
 
 #Searching MATLAB
-FIND_PACKAGE(MATLAB)
+FIND_PACKAGE(Matlab)
 
 #Options
 set (MATLAB_DEBUG FALSE)
