fixed gtest libs includes

--- a/src/matlab/CMakeLists.txt
+++ b/src/matlab/CMakeLists.txt
@@ -36,9 +36,9 @@ macro( matlab_config )
 
     #INCLUDE_DIRECTORIES( ${MATLAB_INCLUDE_DIR} )
 endmacro()
-if(Win32)
+if(WIN32)
 matlab_config()
-endif()
+endif(WIN32)
 MESSAGE('MATLAB libraries: ${MATLAB_LIBRARIES}')
 MESSAGE('MATLAB inc dir: ${MATLAB_INCLUDE_DIR}')
 INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR})
