modified gtest includes windows

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,8 +7,8 @@ MESSAGE("GTEST_DIR " ${GTEST_DIR})
 include_directories("${GTEST_DIR}/include")
 #link_directories("${GTEST_DIR}/mybuild")
 #cuda_include_directories("${GTEST_DIR}/include")
-find_library(GTEST_LIB NAMES gtest libgtest HINTS "${GTEST_DIR}/mybuild")
-find_library(GTESTMAIN_LIB NAMES gtest_main libgtest_main HINTS "${GTEST_DIR}/mybuild")
+find_library(GTEST_LIB NAMES gtest libgtest HINTS "${GTEST_DIR}/mybuild" "${GTEST_DIR}/mybuild/Debug")
+find_library(GTESTMAIN_LIB NAMES gtest_main libgtest_main HINTS "${GTEST_DIR}/mybuild" "${GTEST_DIR}/mybuild/Debug")
 MESSAGE("GTEST_LIB = ${GTEST_LIB}")
 MESSAGE("GTESTMAIN_LIB = ${GTESTMAIN_LIB}")
 #find_library(GRIDDING3D_LIB gridding3D "${CMAKE_SOURCE_DIR}/build/src/Debug")
