--- a/src/matlab/CMakeLists.txt
+++ b/src/matlab/CMakeLists.txt
@@ -91,7 +91,7 @@ CUDA_COMPILE( cuda_mex_kernel_generated ${MEX_FILE} SHARED)
 ADD_LIBRARY(cuda_mex_kernel SHARED ${cuda_mex_kernel_generated} ${MEX_FILE})
 
 #TARGET_LINK_LIBRARIES(cuda_mex_kernel ${MATLAB_LIB_DIR} ${MATLAB_LIB_DIR1} ${CUDA_LIBRARIES} gridding3D)
-TARGET_LINK_LIBRARIES(cuda_mex_kernel MATLAB_MEX_LIBRARY MATLAB_MX_LIBRARY ${CUDA_LIBRARIES} gridding3D)
+TARGET_LINK_LIBRARIES(cuda_mex_kernel ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} gridding3D)
 #ADD_DEPENDENCIES(cuda_mex_kernel ${GRIDDING3D_LIB})
 SET_TARGET_PROPERTIES(cuda_mex_kernel PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
