--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ FIND_PACKAGE(CUDA)
 #Searching MATLAB
 FIND_PACKAGE(Matlab)
 #Options
-set (MATLAB_DEBUG FALSE)
+set (MATLAB_DEBUG false)
 OPTION(WITH_MATLAB_DEBUG "Enable DEBUG messages for MATLAB calls" OFF)
 if (WITH_MATLAB_DEBUG)
  set (MATLAB_DEBUG TRUE)
