--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ set(GPU_DOUBLE_PREC OFF CACHE BOOL "Enable double precision floating point opera
 if(GPU_DOUBLE_PREC)
   SET(CUDA_NVCC_FLAGS "-arch;sm_20")
 else(GPU_DOUBLE_PREC)
-  SET(CUDA_NVCC_FLAGS "-arch;sm_11;-Xcompiler;-fPIC")
+  #SET(CUDA_NVCC_FLAGS "-arch;sm_11" "-Xcompiler" "-fPIC")
+  SET(CUDA_NVCC_FLAGS "-Xcompiler;-fPIC;-arch;sm_20")
 endif(GPU_DOUBLE_PREC)
 
 MESSAGE("setting NVCC FLAGS to: ${CUDA_NVCC_FLAGS}")
