--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ MESSAGE("------setting up testframework-------")
 set(GTEST_DIR ${PROJECT_SOURCE_DIR}/../gtest-1.6.0)
 MESSAGE("GTEST_DIR " ${GTEST_DIR})
 
-include_directories("../../gtest-1.6.0/include")
+include_directories("${GTEST_DIR}/include")
 find_library(GTEST_LIB NAMES gtest libgtest HINTS "${GTEST_DIR}/mybuild" "${GTEST_DIR}/mybuild/Debug")
 find_library(GTESTMAIN_LIB NAMES gtest_main libgtest_main HINTS "${GTEST_DIR}/mybuild" "${GTEST_DIR}/mybuild/Debug")
 MESSAGE("GTEST_LIB = ${GTEST_LIB}")
