--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,7 +13,10 @@ MESSAGE("GTEST_LIB = ${GTEST_LIB}")
 MESSAGE("GTESTMAIN_LIB = ${GTESTMAIN_LIB}")
 
 #cpu test sources
-set(CPU_SOURCES cpu/gridding3D_tests.cpp ../src/griddingFunctions.cpp ../src/gridding3D_cpu.cpp)
+set(CPU_SOURCES cpu/gridding3D_tests.cpp 
+				cpu/gridding3D_kernel_tests.cpp 
+				../src/griddingFunctions.cpp 
+				../src/cpu/gridding3D_cpu.cpp)
 
 #gpu test sources
 set(GPU_SOURCES gpu/gridding3DGPU_tests.cpp)
