moved matlab output scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,22 +4,22 @@ PROJECT(gridding3D)
 #The CMake Minimum version that is required. The FindCUDA script
 #is distributed since version 2.8
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #Searching CUDA
 FIND_PACKAGE(CUDA)
 
 #Searching MATLAB
 FIND_PACKAGE(Matlab)
 #Options
-set (MATLAB_DEBUG false)
+SET (MATLAB_DEBUG false)
 OPTION(WITH_MATLAB_DEBUG "Enable DEBUG messages for MATLAB calls" OFF)
 if (WITH_MATLAB_DEBUG)
- set (MATLAB_DEBUG true)
+ SET (MATLAB_DEBUG true)
 endif()
 MESSAGE(STATUS "Setting MATLAB DEBUG Option to ${MATLAB_DEBUG}")
 
-set(GPU_DOUBLE_PREC OFF CACHE BOOL "Enable double precision floating point operations on GPU")
+SET(GPU_DOUBLE_PREC OFF CACHE BOOL "Enable double precision floating point operations on GPU")
 
 if(GPU_DOUBLE_PREC)
   SET(CUDA_NVCC_FLAGS "-arch;sm_20")
