--- a/src/gpu/CMakeLists.txt
+++ b/src/gpu/CMakeLists.txt
@@ -2,4 +2,4 @@ ADD_SUBDIRECTORY(coarse)
 if(GPU_DOUBLE_PREC)
 	ADD_SUBDIRECTORY(atomic)
 endif()
-#ADD_SUBDIRECTORY(matlab)
+ADD_SUBDIRECTORY(matlab)
