--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,12 +19,19 @@ set(CPU_SOURCES cpu/gridding3D_tests.cpp
 				../src/cpu/gridding3D_cpu.cpp)
 
 #gpu test sources
-set(GPU_SOURCES gpu/gridding3DGPU_tests.cpp)
+set(GPU_SOURCES gpu/gridding3DGPU_conv_tests.cpp
+				gpu/gridding3DGPU_fft_tests.cpp)
 
 #add source dir
 add_executable(runUnitTests ${CPU_SOURCES} ../inc/gridding_cpu.hpp)
 target_link_libraries(runUnitTests ${GTEST_LIB} ${GTESTMAIN_LIB})
 set_target_properties(runUnitTests PROPERTIES LINK_FLAGS -lpthread)
 
+
 cuda_add_executable(runGPUUnitTests ${GPU_SOURCES} ../inc/gridding_gpu.hpp)
 target_link_libraries(runGPUUnitTests gridding3D ${GTEST_LIB} ${GTESTMAIN_LIB})
+
+if(GPU_DOUBLE_PREC)
+	cuda_add_executable(runGPUATMUnitTests ${GPU_SOURCES} ../inc/gridding_gpu.hpp)
+	target_link_libraries(runGPUATMUnitTests gridding3DATM ${GTEST_LIB} ${GTESTMAIN_LIB})
+endif()
