--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,8 @@ SET(GRIDDING_INC_DIR ${CMAKE_SOURCE_DIR}/inc)
 SET(GRIDDING_INCLUDE ${GRIDDING_INC_DIR}/cuda_utils.hpp 
 					 ${GRIDDING_INC_DIR}/cuda_utils.cuh 
 					 ${GRIDDING_INC_DIR}/gridding_gpu.hpp 
-					 ${GRIDDING_INC_DIR}/config.hpp)
+					 ${GRIDDING_INC_DIR}/config.hpp
+					 ${GRIDDING_INC_DIR}/griddingFunctions.hpp)
 
 #Adding src directory to the project
 ADD_SUBDIRECTORY(test)
