moved gridding_kernels.hpp to inc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,8 @@ SET(GRIDDING_INCLUDE ${GRIDDING_INC_DIR}/cuda_utils.hpp
 					 ${GRIDDING_INC_DIR}/cuda_utils.cuh 
 					 ${GRIDDING_INC_DIR}/gridding_gpu.hpp 
 					 ${GRIDDING_INC_DIR}/config.hpp
-					 ${GRIDDING_INC_DIR}/griddingFunctions.hpp)
+					 ${GRIDDING_INC_DIR}/griddingFunctions.hpp
+					 ${GRIDDING_INC_DIR}/gridding_kernels.hpp)
 
 #Adding src directory to the project
 ADD_SUBDIRECTORY(test)
