--- a/src/gpu/coarse/CMakeLists.txt
+++ b/src/gpu/coarse/CMakeLists.txt
@@ -1,9 +1,9 @@
 MESSAGE("Coarse GPU Gridding Library")
 #add exe to build from gridding3D
 if(WIN32)
-	CUDA_ADD_LIBRARY(gridding3D gridding_gpu.cu gridding_kernels.hpp  ../../griddingFunctions.cpp ${GRIDDING_INCLUDE})
+	CUDA_ADD_LIBRARY(gridding3D gridding_gpu.cu ../../griddingFunctions.cpp ${GRIDDING_INCLUDE})
 else(WIN32)
-	CUDA_ADD_LIBRARY(gridding3D gridding_gpu.cu gridding_kernels.hpp ../../griddingFunctions.cpp ${GRIDDING_INCLUDE} SHARED) 
+	CUDA_ADD_LIBRARY(gridding3D gridding_gpu.cu ../../griddingFunctions.cpp ${GRIDDING_INCLUDE} SHARED) 
 endif(WIN32)
 
 CUDA_ADD_CUFFT_TO_TARGET(gridding3D)
