--- a/src/gpu/matlab/CMakeLists.txt
+++ b/src/gpu/matlab/CMakeLists.txt
@@ -76,18 +76,18 @@ INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR})
 set(MEX_FILE gridding3D_mex.cpp ${MATLAB_HELPER_INCLUDE})
 set(MEX_FILE_FORW gridding3D_forw.cpp ${MATLAB_HELPER_INCLUDE})
 
-set(CUDA_NVCC_FLAGS -arch sm_11;--ptxas-options=-v)
+#set(CUDA_NVCC_FLAGS -arch sm_11;--ptxas-options=-v)
 
-CUDA_COMPILE( cuda_mex_kernel_generated ${MEX_FILE} SHARED)
+CUDA_COMPILE( mex_gridding3D_adj_generated ${MEX_FILE} SHARED)
 CUDA_COMPILE( mex_gridding3D_forw_generated ${MEX_FILE_FORW} SHARED)
 
-CUDA_ADD_LIBRARY(cuda_mex_kernel SHARED ${cuda_mex_kernel_generated} ${MEX_FILE})
-TARGET_LINK_LIBRARIES(cuda_mex_kernel ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} gridding3D)
-SET_TARGET_PROPERTIES(cuda_mex_kernel PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
+CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_NAME} SHARED ${mex_gridding3D_adj_generated} ${MEX_FILE})
+TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_NAME})
+SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
-CUDA_ADD_LIBRARY(mex_gridding3D_forw SHARED ${mex_gridding3D_forw_generated} ${MEX_FILE_FORW})
-TARGET_LINK_LIBRARIES(mex_gridding3D_forw ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} gridding3D)
-SET_TARGET_PROPERTIES(mex_gridding3D_forw PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
+CUDA_ADD_LIBRARY(${GRID_MEX_FORW_NAME} SHARED ${mex_gridding3D_forw_generated} ${MEX_FILE_FORW})
+TARGET_LINK_LIBRARIES(${GRID_MEX_FORW_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_NAME})
+SET_TARGET_PROPERTIES(${GRID_MEX_FORW_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
 
 #determine mex suffix
@@ -110,37 +110,36 @@ else(UNIX)
 endif()
   
 if(WIN32)
-  SET_TARGET_PROPERTIES(cuda_mex_kernel PROPERTIES
+  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_NAME} PROPERTIES
 						SUFFIX ${MEX_SUFFIX}
 						LINK_FLAGS /export:mexFunction)
-  SET_TARGET_PROPERTIES(mex_gridding3D_forw PROPERTIES
+  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_NAME} PROPERTIES
 						SUFFIX ${MEX_SUFFIX}
 						LINK_FLAGS /export:mexFunction)
 else(UNIX)
-  SET_TARGET_PROPERTIES(cuda_mex_kernel PROPERTIES SUFFIX ${MEX_SUFFIX})
-  SET_TARGET_PROPERTIES(mex_gridding3D_forw PROPERTIES SUFFIX ${MEX_SUFFIX})  
+  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
+  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})  
 endif()
 
-if(GPU_DOUBLE_PREC)
-  CUDA_ADD_LIBRARY(cuda_atomic_mex_kernel SHARED ${cuda_mex_kernel_generated} ${MEX_FILE})
-  TARGET_LINK_LIBRARIES(cuda_atomic_mex_kernel ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} gridding3DATM)
-  SET_TARGET_PROPERTIES(cuda_atomic_mex_kernel PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
+if(GEN_ATOMIC)
+  CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_ATM_NAME} SHARED ${mex_gridding3D_adj_generated} ${MEX_FILE})
+  TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_ATM_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME})
+  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_ATM_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
-  CUDA_ADD_LIBRARY(mex_gridding3D_forw_atomic SHARED ${mex_gridding3D_forw_generated} ${MEX_FILE_FORW})
-  TARGET_LINK_LIBRARIES(mex_gridding3D_forw_atomic ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} gridding3DATM)
-  SET_TARGET_PROPERTIES(mex_gridding3D_forw_atomic PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
+  CUDA_ADD_LIBRARY(${GRID_MEX_FORW_ATM_NAME} SHARED ${mex_gridding3D_forw_generated} ${MEX_FILE_FORW})
+  TARGET_LINK_LIBRARIES(${GRID_MEX_FORW_ATM_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME})
+  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_ATM_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
-  
   if(WIN32)
-	SET_TARGET_PROPERTIES(cuda_atomic_mex_kernel PROPERTIES
+	SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_ATM_NAME} PROPERTIES
 						SUFFIX ${MEX_SUFFIX}
 						LINK_FLAGS /export:mexFunction)
-	SET_TARGET_PROPERTIES(mex_gridding3D_forw_atomic PROPERTIES
+	SET_TARGET_PROPERTIES(${GRID_MEX_FORW_ATM_NAME} PROPERTIES
 						SUFFIX ${MEX_SUFFIX}
 						LINK_FLAGS /export:mexFunction)
   else(UNIX)						
-	SET_TARGET_PROPERTIES(cuda_atomic_mex_kernel PROPERTIES SUFFIX ${MEX_SUFFIX})
-	SET_TARGET_PROPERTIES(mex_gridding3D_forw_atomic PROPERTIES SUFFIX ${MEX_SUFFIX})
+	SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_ATM_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
+	SET_TARGET_PROPERTIES(${GRID_MEX_FORW_ATM_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
   endif()
 endif()
 
