--- a/src/gpu/matlab/sparse/CMakeLists.txt
+++ b/src/gpu/matlab/sparse/CMakeLists.txt
@@ -1,31 +1,31 @@
-MESSAGE("Sparse GPU Gridding Library (Freiburg)")
+MESSAGE("Generate sparse GPU Gridding Library (Freiburg)")
 
-set(SPARSE_MEX_FILE tikreg_gridding_gpu_f.cu )
-set(SPARSE_MEX_FILE_FORW tikreg_gridding_forward_gpu_f.cu )
+set(SPARSE_MEX_FILE tikreg_gridding_gpu.cu ${CONFIG_INCLUDE})
+set(SPARSE_MEX_FILE_FORW tikreg_gridding_forward_gpu.cu ${CONFIG_INCLUDE})
 
 CUDA_COMPILE( mex_gridding3D_sparse_gen ${SPARSE_MEX_FILE} SHARED)
 CUDA_COMPILE( mex_gridding3D_sparse_forw_gen ${SPARSE_MEX_FILE_FORW} SHARED)
 
-CUDA_ADD_LIBRARY(mex_gridding3D_sparse SHARED ${mex_gridding3D_sparse_gen} ${SPARSE_MEX_FILE})
-TARGET_LINK_LIBRARIES(mex_gridding3D_sparse ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES})
-SET_TARGET_PROPERTIES(mex_gridding3D_sparse PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
+CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_SPARSE_NAME} SHARED ${mex_gridding3D_sparse_gen} ${SPARSE_MEX_FILE})
+TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_SPARSE_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES})
+SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
-CUDA_ADD_CUFFT_TO_TARGET(mex_gridding3D_sparse)
+CUDA_ADD_CUFFT_TO_TARGET(${GRID_MEX_ADJ_SPARSE_NAME})
 
-CUDA_ADD_LIBRARY(mex_gridding3D_sparse_forw SHARED ${mex_gridding3D_sparse_forw_gen} ${SPARSE_MEX_FILE_FORW})
-TARGET_LINK_LIBRARIES(mex_gridding3D_sparse_forw ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES})
-SET_TARGET_PROPERTIES(mex_gridding3D_sparse_forw PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
+CUDA_ADD_LIBRARY(${GRID_MEX_FORW_SPARSE_NAME} SHARED ${mex_gridding3D_sparse_forw_gen} ${SPARSE_MEX_FILE_FORW})
+TARGET_LINK_LIBRARIES(${GRID_MEX_FORW_SPARSE_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES})
+SET_TARGET_PROPERTIES(${GRID_MEX_FORW_SPARSE_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
-CUDA_ADD_CUFFT_TO_TARGET(mex_gridding3D_sparse_forw)
+CUDA_ADD_CUFFT_TO_TARGET(${GRID_MEX_FORW_SPARSE_NAME})
 
 if(WIN32)
-  SET_TARGET_PROPERTIES(mex_gridding3D_sparse PROPERTIES
+  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES
 						SUFFIX ${MEX_SUFFIX}
 						LINK_FLAGS /export:mexFunction)
-  SET_TARGET_PROPERTIES(mex_gridding3D_sparse_forw PROPERTIES
+  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_SPARSE_NAME} PROPERTIES
 						SUFFIX ${MEX_SUFFIX}
 						LINK_FLAGS /export:mexFunction)
 else(UNIX)
-  SET_TARGET_PROPERTIES(mex_gridding3D_sparse PROPERTIES SUFFIX ${MEX_SUFFIX})
-  SET_TARGET_PROPERTIES(mex_gridding3D_sparse_forw PROPERTIES SUFFIX ${MEX_SUFFIX})  
+  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
+  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_SPARSE_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})  
 endif()
