fixed linux build problems with sparse mex files

--- a/src/gpu/matlab/sparse/CMakeLists.txt
+++ b/src/gpu/matlab/sparse/CMakeLists.txt
@@ -6,13 +6,13 @@ set(SPARSE_MEX_FILE_FORW tikreg_gridding_forward_gpu.cu ${CONFIG_INCLUDE})
 CUDA_COMPILE( mex_gridding3D_sparse_gen ${SPARSE_MEX_FILE} SHARED)
 CUDA_COMPILE( mex_gridding3D_sparse_forw_gen ${SPARSE_MEX_FILE_FORW} SHARED)
 
-CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_SPARSE_NAME} SHARED ${mex_gridding3D_sparse_gen} ${SPARSE_MEX_FILE})
+CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_SPARSE_NAME} SHARED ${mex_gridding3D_sparse_gen})# ${SPARSE_MEX_FILE})
 TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_SPARSE_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES})
 SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
 CUDA_ADD_CUFFT_TO_TARGET(${GRID_MEX_ADJ_SPARSE_NAME})
 
-CUDA_ADD_LIBRARY(${GRID_MEX_FORW_SPARSE_NAME} SHARED ${mex_gridding3D_sparse_forw_gen} ${SPARSE_MEX_FILE_FORW})
+CUDA_ADD_LIBRARY(${GRID_MEX_FORW_SPARSE_NAME} SHARED ${mex_gridding3D_sparse_forw_gen})# ${SPARSE_MEX_FILE_FORW})
 TARGET_LINK_LIBRARIES(${GRID_MEX_FORW_SPARSE_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES})
 SET_TARGET_PROPERTIES(${GRID_MEX_FORW_SPARSE_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)
 
